# notion_test_1

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/faq_assistant/: __init__.py  config.py  main.py
src/faq_assistant/adapters/: __init__.py  milvus_store.py  openai_llm.py  semantic_category_router.py  sentence_transformers_embedding.py
src/faq_assistant/api/: __init__.py  deps.py  routes.py  schemas.py
src/faq_assistant/application/: __init__.py  bootstrap.py  category_anchors.py  kb_loader.py  rag_orchestrator.py
src/faq_assistant/domain/: __init__.py  models.py
src/faq_assistant/ports/: __init__.py  category_router.py  embedding.py  llm.py  vector_store.py
tests/: fakes.py  test_api.py  test_bootstrap.py  test_kb_loader.py  test_rag_orchestrator.py
